fixed up projects. could use a bit more work to make images not stretched

--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ html, body{
 .project_img{
     display: block;
     width: 100%;
+    height: 184px;
     border-radius: 5px;
     box-shadow: 10px 10px 20px rgb(64, 64, 64);
 }
@@ -192,6 +193,11 @@ html, body{
     margin-top: .25em;
 }
 
+.github-link{
+    width: 75%;
+    height: 154px;
+    margin-left: 20px;
+}
 /* RESUME SECTION */
 #education > h5{
     font-size: 33px;
